<resources>

    <!-- menu -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="note">Note</string>
    <string name="cinemas">Cinemas</string>
    <string name="promotion">Promotion</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="more_option">More Options</string>

    <!-- action menu -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- common -->
    <string name="success">Success</string>
    <string name="successfully">Successfully</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="finished">Finished</string>
    <string name="processing">Processing&#8230;</string>

    <!-- about us -->
    <string name="about_title">MozaTech</string>
    <string name="about_content1">Provides Android, iOS, Web Source Codes and Development Services.</string>
    <string name="about_content2">Highly Committed to Quality Products and Excellent Services.</string>
    <string name="about_link"><u>http://mozagroup.com/</u></string>

    <!-- msg -->
    <string name="msg_connection_network_error">There are no network. Please check connection networking</string>
    <string name="msg_network_notify">Network error please check your internet connection and try again by closing app and open</string>
    <string name="msg_register_successfully">Register successfully</string>
    <string name="msg_login_successfully">Login successfully</string>
    <string name="msg_username_required">Username is required</string>
    <string name="msg_email_required">Email not valid, eg: example@info.com</string>
    <string name="msg_password_required">Password is required</string>
    <string name="msg_password_not_valid">Password must be from 6 characters</string>
    <string name="msg_password_not_match">Password not match</string>
    <string name="msg_name_required">Name is required</string>
    <string name="msg_enter_all_field">Please enter fields are empty</string>
    <string name="msg_bank_account_required">Bank acocunt is required</string>
    <string name="msg_address_required">Address is required</string>
    <string name="msg_phone_required">phone is required</string>
    <string name="msg_invalid_image_format">This is not a picture</string>
    <string name="msg_update_successfully">Updated successfully</string>
    <string name="msg_update_fail">Fail to update, please try again later</string>
    <string name="msg_turning_on_location">Please turn on your location to be able to get your current location</string>
    <string name="msg_confirm_log_out">Do you want to log out?</string>
    <string name="msg_confirm_exit">Do you want to exit app?</string>
    <string name="msg_no_email_client">There are no email clients installed.</string>
    <string name="msg_no_email">This user has no an email address</string>
    <string name="msg_no_seat">Have you chosen your seat yet</string>
    <string name="msg_no_phone_number">This user has no phone number</string>
    <string name="msg_confirm_rating">Please enter your comment and rate this deal</string>
    <string name="msg_chose_information_film">Chose Information For Film</string>
    <!-- msg search -->
    <string name="msg_search_required">Please enter anything you want to search</string>
    <string name="msg_no_more_data">No more data</string>

    <!-- user infor -->
    <string name="login">Login</string>
    <string name="login_facebook">Login by Facebook</string>
    <string name="login_google">Login by Google+</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="address">Address</string>
    <string name="phone_number_star">Phone Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="term_and_conditions">Term &amp; Conditions Policy</string>
    <string name="have_not_yet_account">Have not yet account?</string>
    <string name="account_have_aready">Have already account?</string>
    <string name="email_sent">We have sent you an email</string>
    <string name="no_worries">No worries</string>
    <string name="send_email">Send Email</string>
    <string name="lock">CVC</string>
    <string name="calendar">MM/YY</string>
    <string name="remember_me">Remember me</string>
    <string name="mobile_number">For security, please enter your mobile phone number:</string>
    <string name="payment">PAYMENT</string>
    <string name="mobile">+84</string>
    <string name="change_password">Change Password</string>
    <string name="book_ticket">BOOK TICKET</string>
    <string name="card_number">Card Number</string>
    <string name="about">ABOUT</string>
    <string name="submit">Submit</string>

    <!-- other screen -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- for tab of home screen-->
    <string-array name="tabs">
        <item>New</item>
        <item>Top</item>
    </string-array>

    <string-array name="row_name">

    </string-array>
    <!-- profile -->
    <string name="last_name">Last name *</string>
    <string name="first_name">First name *</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="post_code">PostCode</string>
    <string name="company">Company</string>
    <string name="confirm">Confirm</string>

    <!-- msg booking -->
    <string name="sign_in_now">Sign in Now</string>
    <string name="start_now">Start Now</string>
    <string name="register_now">Register Now</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="available">Available</string>
    <string name="taken">Taken</string>
    <string name="choosing">Choosing</string>
    <string name="checkout">CHECK OUT</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="three">3</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="reward_point">REWARD POINT</string>
    <string name="reward_point_earned">Reward points earned</string>
    <string name="total_spend_2016">Total spend 2016</string>
    <string name="point">$ 300</string>
    <string name="my_order">MY ORDER</string>
    <string name="theater">Theater</string>
    <string name="movie">Movie</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="member">Member</string>
    <string name="notifications">Notifications</string>
    <string name="newsletter">Newsletter</string>
    <string name="privacy">Privacy</string>
    <string name="lovers_ticket">LOVERS\' TICKET</string>
    <string name="read_more">Read More</string>
    <string name="the_cast">THE CAST</string>
    <string name="reviews">REVIEWS</string>
    <string name="ticket">Ticket</string>
    <string name="rate">RATE</string>
    <string name="rating">Rating</string>
    <string name="message">Message</string>
    <string name="comment">Comment</string>
    <string name="moza_tech">MOZA TECH</string>
    <string name="contact_us">Contact Us</string>
    <string name="skype">moza.group | moza.tech</string>
    <string name="mail">tech@mozagroup.com</string>
    <string name="phone_number">+84912 738 748</string>
    <string name="total_star">/10</string>
    <string name="state_choosing">Choosing</string>
    <string name="total_point">Total Point</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="film">Film</string>
    <string name="seats">Seats</string>
    <string name="skip">Skip</string>
    <string name="info_user">User Information</string>
    <string name="gender">Gender</string>
    <string name="pay">Pay</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="msg_chose_cinemas">Let\'s Chose Cinema, Please</string>
    <string name="description">Description</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
</resources>
