<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cinemas"
            android:icon="@drawable/ic_cinemas"
            android:title="@string/cinemas" />
        <item
            android:id="@+id/nav_promotion"
            android:icon="@drawable/ic_promotion"
            android:title="@string/promotion" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        </group>
        <item
            android:title="@string/more_option">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"/>
            </menu>
        </item>

</menu>
