<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:minWidth="@dimen/width_230dp"
    android:orientation="vertical">

    <com.pt.movieticket.widgets.textview.TextViewUTMAircona
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="@dimen/text_size_xlarge" />

    <EditText
        android:id="@+id/edt_old_pass"
        android:layout_width="@dimen/width_200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_2x"
        android:background="@drawable/bg_edt_gray_light"
        android:hint="@string/old_password"
        android:inputType="textPassword|textNoSuggestions"
        android:padding="@dimen/dimen_05x"
        android:textSize="@dimen/text_size_xnormal" />

    <EditText
        android:id="@+id/edt_new_pass"
        android:layout_width="@dimen/width_200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_05x"
        android:background="@drawable/bg_edt_gray_light"
        android:hint="@string/new_password"
        android:inputType="textPassword|textNoSuggestions"
        android:padding="@dimen/dimen_05x"
        android:textSize="@dimen/text_size_xnormal" />

    <com.pt.movieticket.widgets.textview.TextViewUTMBitsumishiPro
        android:id="@+id/tv_save"
        android:layout_width="@dimen/width_200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_2x"
        android:layout_marginTop="@dimen/dimen_2x"
        android:background="@drawable/bg_sign_in"
        android:gravity="center_horizontal"
        android:padding="@dimen/dimen_05x"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />
</LinearLayout>