<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_about_us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_abouts_transparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_4x"
        android:paddingLeft="@dimen/dimen_4x"
        android:paddingRight="@dimen/dimen_2x">

        <com.pt.movieticket.widgets.textview.TextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_x2x"
            android:text="@string/about_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_30" />

        <com.pt.movieticket.widgets.textview.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_content1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_xsmall" />

        <com.pt.movieticket.widgets.textview.TextViewBold
            android:id="@+id/textViewBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_1x"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="@dimen/divider_90dp"
            android:layout_height="@dimen/divider_height"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_05x"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dimen_1x"
                android:src="@drawable/ic_skype" />

            <com.pt.movieticket.widgets.textview.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_link"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xsmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_05x"
            android:orientation="horizontal"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dimen_1x"
                android:src="@drawable/ic_mail" />

            <com.pt.movieticket.widgets.textview.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mail"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xsmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_05x"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dimen_1x"
                android:src="@drawable/ic_phone" />

            <com.pt.movieticket.widgets.textview.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xsmall" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>